src/objects/Document__c.object
<CustomObject>
    <fields>
        <fullName>Account_Id__c</fullName>
        <formula>IF(NOT(ISBLANK(Account__c)), Account__c,  IF(NOT(ISBLANK(Board_Meeting__c)), Board_Meeting__r.Account__c , IF(NOT(ISBLANK(Contact__c)), Contact__r.AccountId,IF(NOT(ISBLANK(Opportunity__c )), Opportunity__r.AccountId ,null))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_RT_Name__c</fullName>
        <formula>Account__r.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account RT Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Documents</relationshipLabel>
        <relationshipName>Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Board_Meeting__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Board Meeting</label>
        <referenceTo>Board_Meeting__c</referenceTo>
        <relationshipLabel>Documents</relationshipLabel>
        <relationshipName>Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Documents</relationshipLabel>
        <relationshipName>Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Documents_Folder_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Documents Folder Template</label>
        <referenceTo>Documents_Folder_Template__c</referenceTo>
        <relationshipLabel>Documents</relationshipLabel>
        <relationshipName>Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Investment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Investment</label>
        <referenceTo>Investment__c</referenceTo>
        <relationshipLabel>Documents</relationshipLabel>
        <relationshipName>Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Documents</relationshipLabel>
        <relationshipName>Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Release_date__c</fullName>
        <label>Release date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Round__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Round</label>
        <referenceTo>Round__c</referenceTo>
        <relationshipLabel>Documents</relationshipLabel>
        <relationshipName>Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sensitivity__c</fullName>
        <label>Sensitivity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Restricted</fullName>
                    <default>true</default>
                    <label>Restricted</label>
                </value>
                <value>
                    <fullName>Public</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Shared_With_Account__c</fullName>
        <label>Shared With Account</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shared_with_Users_from_this_account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Shared with Users from this account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Unverified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unverified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UploadedByPortalUser__c</fullName>
        <formula>IF(Owner:User.Account_Id__c!=null, true, false)</formula>
        <label>UploadedByPortalUser?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Verify_Date__c</fullName>
        <label>Approve Date</label>
        <type>DateTime</type>
    </fields>
    <label>Document</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>Sensitivity__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Document Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Documents</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>